ontol/ontol-compiler/test-cases/error/rel/value_generator_nonsense.on
def bar ( rel* 'prop': text )
def foo (
    rel* 'bar'
        [rel* gen: auto] // ERROR cannot generate a value of type `bar`
    : bar
)
